* pattern cheat sheet * minor style changes * error checking in case user imports a patterns json as the main proxy settings (doh!)

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -327,7 +327,7 @@ input.switch:checked + label::after {
 
 
 
-.fp-orange {
+.fp-orange, .orangehover:hover {
   color: #f90;
 }
 
@@ -585,10 +585,14 @@ input[type="text"] + button i.fa.fa-eye {
 }
 
 .tooltip i.fa {
-  font-size: 1.5em;
-  color: #ccc;
+  font-size: 1.2em;
+  color: black;
 }
 
 .tooltip i.fa:hover {
   color: #f90;
+}
+
+.monospace {
+  font-family: monospace;
 }
