* Fixes so that FoxyProxy Basic can share the same codebase as FoxyProxy Standard again. Version number alignment: for the first time since FoxyProxy Basic   was introduced, it will share the same version number as FoxyProxy Standard. * Exported settings now include FoxyProxy edition &mdash; Standard or Basic. However, they are interchangeable. * Removed link to <a href="https://forums.getfoxyproxy.org/" target="_blank"><i class="fa fa-users"></i>Community Support Forums</a>.   We are shutting the forums down. People just don't use forums anymore; we only get spam there.   And have many other support chanels: email, ticket system, github, facebook, twitter, chat, etc. * Escape button works to close the current FoxyProxy window and return to the previous (if there is a previous). * Dialog box color changes for consistency

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -473,7 +473,7 @@ input.switch:checked + label::after {
 
 .popup h3 {
   color: #fff;
-  background-color: #f80;
+  background-color: #630;
   margin: 0 0 1em;
   padding: 0.5em;
   border-radius: 10px 10px 0 0 ;
@@ -498,11 +498,6 @@ input.switch:checked + label::after {
   margin: 0;
 }
 
-.popup button:first-of-type {
-  background: none;
-  border: none;
-  color: #f90;
-}
 /* ----- /Popup ----- */
 
 
