--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -579,6 +579,18 @@ input[type="text"] + button i.fa.fa-eye {
   left: 50%;
 }
 
+.tooltiptext.bottom {
+  top: 125%;
+  bottom: auto;
+}
+
+.tooltiptext.bottom::after {
+  bottom: 100%;
+  top: auto;
+  left: 75%;
+  border-color: transparent transparent #555 transparent;
+}
+
 .tooltip i.fa {
   font-size: 1.2em;
   color: black;
